<?xml version="1.0"?>
<package format="2">
  <name>smb_description</name>
  <version>0.0.0</version>
  <description>The smb_description package</description>

  <maintainer email="nkhedekar@nevada.unr.edu">Nikhil Khedekar</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <build_depend>lidar_description</build_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>lidar_description</build_export_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>lidar_description</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
