<?xml version="1.0"?>
<package format="2">
  <name>smb_opc</name>
  <version>0.0.0</version>
  <description>The smb_opc package</description>

  <maintainer email="nkhedekar@nevada.unr.edu">Nikhil Khedekar</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interactive_marker_twist_server</build_depend>
  <build_depend>smb_description</build_depend>
  <build_depend>smb_teleop_twist_joy</build_depend>
  <build_depend>joy</build_depend>
  <build_export_depend>interactive_marker_twist_server</build_export_depend>
  <build_export_depend>smb_description</build_export_depend>
  <build_export_depend>smb_teleop_twist_joy</build_export_depend>
  <build_export_depend>joy</build_export_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>smb_description</exec_depend>
  <exec_depend>smb_teleop_twist_joy</exec_depend>
  <exec_depend>joy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
