<?xml version="1.0"?>
<package format="2">
  <name>smb_simulator</name>
  <version>1.0.0</version>
  <description>SuperMegaBot Simulator</description>
  <maintainer email="mkulkarni@nevada.unr.edu">Mihir Kulkarni</maintainer>
	<maintainer email="mdharmadhikari@nevada.unr.edu">Mihir Dharmadhikari</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>planner_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>smb_navigation</depend>
	<depend>smb_opc</depend>
	<depend>smb_path_tracker</depend>
	<depend>smb_description</depend>
	<depend>smb_msgs</depend>
	<depend>smb_teleop_twist_joy</depend>
	<depend>smb_gazebo</depend>
	<depend>smb_lowlevel_controller</depend>
	<depend>lidar_description</depend>

</package>
